Updated scripts for remote execution

--- a/config.template
+++ b/config.template
@@ -1,6 +1,8 @@
 {
-  "username" : "",
-  "password" : "",
-  "hostname" : "",
-  "path"     : ""
+  "username"     : "",
+  "password"     : "",
+  "hostname"     : "",
+  "plantcv-path" : "",
+  "git-path"     : "",
+  "www-path"     : ""
 }
